Added style and responsiveness via CSS to index.html

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odin Recipes | Home</title>
+  <link rel="stylesheet" href="index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playwrite+IN:wght@100..400&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Odin Recipes</h1>
-  <ul>
-    <li><a href="./Recipes/lasagna.html">Lasagna</a></li>
-    <li><a href="./Recipes/sweet-potato-pie.html">Sweet Potato Pie</a></li>
-    <li><a href="./Recipes/grilled-fish-steaks.html">Grilled Fish Steaks</a></li>
-  </ul>
+  <h1 class="header">Odin Recipes</h1>
+  <div class="recipes">
+    <div class="recipe"><a href="/Recipes/grilled-fish-steaks.html">Grilled Fish Steaks</a></div>
+    <div class="recipe"><a href="/Recipes/lasagna.html">Lasagna</a></div>
+    <div class="recipe"><a href="/Recipes/sweet-potato-pie.html">Sweet Potato Pie</a></div>
+  </div>
 </body>
 </html>
